# agentic

./: .agenticignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
agentic/: config.py  database.py  ingest.py  logging.py  main.py  models.py  rag_agent.py  session_store.py  utils.py
agentic/chat/: azure.py
agentic/embeddings/: ollama.py
cli/: managers.py
config/: config.toml.example  config.yaml.example
docs/: api.md  installation.md  usage.md
scripts/: clear_sessions.py  embtest.py  howto.md  ingest_codebase.py  init_db.py  manage.py  migrate_db.py  test_query.py
src/agentic/: __init__.py  config.py  conversational_agent.py  database.py  ingestor.py  logger.py  main.py  models.py  rag_agent.py  session_store.py  utils.py
src/agentic/agents/: conversational_agent.py
src/agentic/api/v1/: __init__.py  chat.py  deps.py  general.py
src/agentic/chat/: azure.py
src/agentic/embeddings/: azure.py  ollama.py
src/agentic/formatting/: __init__.py  console.py  formatters.py
tests/: conftest.py  test_api_v1_deps.py  test_api_v1_general.py  test_chat_azure.py  test_config.py  test_conversational_agent.py  test_database.py  test_embeddings_ollama.py  test_formatting.py  test_ingestor.py  test_logger.py  test_main.py  test_models.py  test_rag_agent.py  test_session_store.py  test_utils.py
